<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nadchodzace_zawody"
            android:title="@string/nadchodzace_zawody" />
        <item
            android:id="@+id/wyniki"
            android:title="@string/wyniki" />
        <item
            android:id="@+id/zaklady"
            android:title="@string/zaklady" />
        <item
            android:id="@+id/zawodnicy"
            android:title="@string/zawodnicy" />
        <item
            android:id="@+id/zespoly"
            android:title="@string/zespoly" />
        <item
            android:id="@+id/mecze"
            android:title="@string/mecze" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
